# Flylab

./: .gitignore  .project  README  calibrate_camera.txt  calibrate_galvos.txt  calibration.txt  calibration.txt~  frames.gv  install.txt  readme_experiments.txt  rebagger  retracker  rostopic pub JoystickCommands.txt
LEDPanels/: mainpage.dox  manifest.xml
LEDPanels/launch/: main.launch
LEDPanels/msg/: MsgPanelsCommand.msg
LEDPanels/nodes/: panels.py
LEDPanels/srv/: SrvGetADCValue.srv
actuation/fivebar/: .gitignore  Fivebar_urdf.xml  Fivebar_urdf_mm.xml  manifest.xml
actuation/motorarm/: manifest.xml
actuation/nullmotor/: manifest.xml
actuation/stage_action_server/: manifest.xml
arena_tf/: manifest.xml
arena_tf/launch/: main.launch
arena_tf/msg/: CalibrationCamera.msg  CalibrationStage.msg  InBounds.msg
arena_tf/nodes/: OriginateCalibrationCamera.py  OriginateCalibrationStage.py  TransformServerArenaCamera.py  (+1 more)
calibration/: mainpage.dox  manifest.xml
experiment_msgs/: mainpage.dox  manifest.xml
experiment_srvs/: mainpage.dox  manifest.xml
experiments/: manifest.xml
flycore/: manifest.xml
flylaball/: mainpage.dox  manifest.xml
galvodirector/: calibrate_galvos.txt  mainpage.dox  manifest.xml
galvodriver/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
galvos/: CMakeLists.txt  mainpage.dox  manifest.xml
gui/: mainpage.dox  manifest.xml
image_gui/: manifest.xml
matlab/: FlylabClipByCount.m  FlylabDeleteDeadFlyFiles.m  FlylabGetHistPos.m  FlylabGetHistogramPosition.m  FlylabGetInteractions.m  FlylabGetInteractionsFiles.m  FlylabGetLeader.m  FlylabGetObjectState.m  FlylabGetTransformedData.m  FlylabGetTransformedStates.m  FlylabGetTrigger.m  FlylabHasDeadFly.m  FlylabIsDeadFly.m  FlylabIsValidFiledata.m  FlylabPlotAllInteractions.m  FlylabPlotAngleOverTime.m  FlylabPlotDistanceInteractions.m  FlylabPlotHistogramInteractions.m  FlylabPlotHistogramPosition.m  FlylabPlotHistogramPositionFiles.m  FlylabPlotPosition.m  FlylabPlotPositionHistogramFiles.m  FlylabPlotSpeed.m  FlylabReadData.m  FlylabReadFile.m  FlylabReadHeader.m  FlylabReadHeader.m~  FlylabReadStates.m  FlylabScriptPlotFiles.m  GetFilenames.m  ScriptFlylabPlotFiles.m  ScriptFlylabPlotInteractions.m  ScriptFlylabPlotPositionFiles.m  ScriptFlylabPlotSpectrogram.m  ScriptFlylabPlotSpeed.m  ScriptFlylabPlotTriggerPosition.m  ScriptPlotAllTrials.m  clipmat.m  scatterPose.m
panels/: mainpage.dox  manifest.xml
patterngen/: manifest.xml
plate_tf/: mainpage.dox  manifest.xml
pythonmodules/: mainpage.dox  manifest.xml
ros/: Flyatar Definitions  flyatar.github.rosinstall  flyatar.launch  flyatar.local.rosinstall  frames.gv  rosinstall
save/: mainpage.dox  manifest.xml
save_data/: mainpage.dox  manifest.xml
sensors/camera_firewire/: CMakeLists.txt  rosdep.yaml
sensors/camera_firewire/calibration_data/: ost_UndistortedImage.txt
sensors/camera_firewire/include/dcam1394/: dcam1394.h  image_proc.h
sensors/camera_firewire/launch/: camera_firewire.launch
sensors/camera_firewire/src/: camera_firewire.cpp
sensors/camera_firewire/src/dcam1394/: dcam1394.cpp
tracking/: CMakeLists.txt  debugging.txt  mainpage.dox  manifest.xml
udevrules/: 49-teensy.rules  99-flylab-stage.rules  99-raw1394.rules  99-simple_step.rules
ui/: Fivebar.vcg  FlyView.vcg  Multifly.vcg  Rotcam.vcg  arena.rviz  manifest.xml  nullmotor.vcg
(+1154 files in other folders)
